fix white space and button

--- a/css/style.css
+++ b/css/style.css
@@ -1045,6 +1045,7 @@ video {
 
 body {
   font-family: "Inter", sans-serif;
+  overflow-x: hidden;
 }
 
 .navbar-fixed {
@@ -1098,10 +1099,11 @@ body {
 }
 
 a.button {
-  display: inline-block;
+  display: block;
   text-align: center;
   text-decoration: none;
   white-space: nowrap;
+  padding: 1rem;
 }
 
 /* Responsive button styling */
@@ -1111,6 +1113,7 @@ a.button {
     width: 100%;
     padding: 1rem;
     box-sizing: border-box;
+    display: block;
   }
 }
 
@@ -1137,10 +1140,6 @@ a.button {
   /* Ensure the SVG maintains its size */
   z-index: 0;
   /* Lower z-index to be behind */
-}
-
-.text-newline {
-  display: block;
 }
 
 .hover\:bg-cyan1:hover {
