--- a/src/css/input.css
+++ b/src/css/input.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: "Inter", sans-serif;
+  overflow-x: hidden;
 }
 
 .navbar-fixed {
@@ -39,10 +40,11 @@ body {
 }
 
 a.button {
-  display: inline-block;
+  display: block;
   text-align: center;
   text-decoration: none;
   white-space: nowrap;
+  padding: 1rem;
 }
 
 /* Responsive button styling */
@@ -51,6 +53,7 @@ a.button {
     width: 100%;
     padding: 1rem;
     box-sizing: border-box;
+    display: block;
   }
 }
 
@@ -72,8 +75,4 @@ a.button {
   left: 50%;
   transform: translateX(-50%) scale(1); /* Ensure the SVG maintains its size */
   z-index: 0; /* Lower z-index to be behind */
-}
-
-.text-newline {
-  display: block;
 }
